fixes small layout issue with login button

--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,7 @@
 	.logo_banner button {
 		position: absolute;
 		width: 80%;
-		top: 160px;
+		top: 200px;
 		left: 10%;
 		padding: 30px 0 30px 30px;
 		border: 1px solid #3f5f7f;
